--- a/src/app/components/create-empleado/create-empleado.component.html
+++ b/src/app/components/create-empleado/create-empleado.component.html
@@ -4,31 +4,55 @@
             <div class="card text-center mt-5">
                 <div class="card-body">
                     <h3 class="title">{{title}}
-                        <div class="spinner-border float-end" role="status" *ngIf="loading">
+                        <div class="row" *ngIf="loading">
+                            <div class="spinner-border float-end" role="status" >                            
+                            </div>
                             <span class="sr-only">Loading...</span>
-                        </div>
+                        </div>                         
                     </h3>
                     <span *ngIf="submited && createEmpleado.invalid" class="alert alert-danger mt-4 mb-4 d-block">TODOS LOS CAMPOS SON OBLIGATORIOS</span>
                     <form [formGroup]="createEmpleado" (ngSubmit)="addOrEdit()">
                         <div class="row m-2">
                             <div class="col ps-0 pe-1">
-                                <input type="text" class="form-control form-control-lg" placeholder="Nombre" formControlName="nombre" />
+                                <input type="text" class="form-control form-control-lg" placeholder="Nombre" formControlName="nombre" minlength="3" maxlength="20" required />
+                                <span *ngIf="submited && createEmpleado.controls['nombre'].invalid" class="alert alert-danger mt-4 mb-4 d-block text-start">
+                                    El nombre solo pude contener carácteres del alfabeto y espacios para nombres compuestos entre 3 y 20 carácteres.
+                                </span>
                             </div>                            
                             <div class="col ps-1 pe-0">
-                                <input type="text" class="form-control form-control-lg" placeholder="Apellido"  formControlName="apellido" />
+                                <input type="text" class="form-control form-control-lg" placeholder="Apellido"  formControlName="apellido"  minlength="3" maxlength="20" required />
+                                <span *ngIf="submited && createEmpleado.controls['apellido'].invalid" class="alert alert-danger mt-4 mb-4 d-block text-start">
+                                    El apellido solo pude contener carácteres del alfabeto y espacios para nombres compuestos entre 3 y 20 carácteres.
+                                </span>
                             </div>  
                         </div>
                         <div class="row m-2">
-                            <input type="text" class="form-control form-control-lg" placeholder="Documento"  formControlName="documento" />
+                            <input type="text" class="form-control form-control-lg" placeholder="Documento identificativo NIF/NIE"  formControlName="documento"  minlength="9" maxlength="9" required />
+                            <span *ngIf="submited && createEmpleado.controls['documento'].invalid" class="alert alert-danger mt-4 mb-4 d-block text-start">
+                                El documento identificativo debe tener 9 carácteres alfanuméricos en formato NIF o NIE válido.
+                            </span>
                         </div>
                         <div class="row m-2">
-                            <input type="number" class="form-control form-control-lg" placeholder="Salario"  formControlName="salario" />
+                            <input 
+                                type="number" 
+                                class="form-control form-control-lg" 
+                                placeholder="Salario anual"  
+                                formControlName="salario" 
+                                minlength="3" 
+                                maxlength="6" 
+                                min="600"
+                                max="999999"
+                                step="1" 
+                                required />
+                                <span *ngIf="submited && createEmpleado.controls['salario'].invalid" class="alert alert-danger mt-4 mb-4 d-block text-start">
+                                    El salario debe estar en formato numérico de 3 a 6 dígitos.
+                                </span>
                         </div>
                         <div class="mt-3">
                            <button class="btn btn-secondary btn-lg me-3" type="text" routerLink="/list-empleados">
                                 Volver
                            </button>
-                           <button class="btn btn-dark btn-lg ms-3" type="text" >
+                           <button class="btn btn-dark btn-lg ms-3" type="text" [disabled]="!createEmpleado.valid" >
                                 {{buttonText}}
                             </button>
                         </div>                        
